[package]
name = "rutebot"
version = "0.6.0"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2018"
keywords = ["telegram", "bot", "telegram-api", "telegram-bot"]
license = "MIT"
description = "Telegram bot api bindings"
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/Leonqn/rutebot"

[dependencies]
hyper =  "0.13"
hyper-tls = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper-multipart-rfc7578 = "0.4.0-rc"
tokio = { version = "0.2" }
bytes = "0.5"

[dev-dependencies]
pretty_assertions = "0.6.1"
tokio = { version = "0.2", features = ["full"] }
