[package]
name = "rutebot"
version = "0.7.3"
authors = ["Ilya Titkov <ilya@titkov.me>"]
edition = "2018"
keywords = ["telegram", "bot", "telegram-api", "telegram-bot"]
license = "MIT"
description = "Telegram bot api bindings"
categories = ["api-bindings"]
readme = "README.md"
repository = "https://github.com/Leonqn/rutebot"

[dependencies]
hyper =  { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper-multipart-rfc7578 = "0.5"
tokio = { version = "1", features = ["time"] }
bytes = "1"
fure = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
